# F5-TTS

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  Dockerfile  F5_TTS.ipynb  LICENSE  NEW_FEATURES_USAGE_GUIDE.md  README.md  README_RL.md  Spanish_F5.ipynb  api.py  app.py  asr_transcripts_metadata.csv  config.toml  docker-compose.yaml  docker-compose.yml  english_nepali_transliteration_gemini.json  entrypoint.sh  finetune-cli.py  finetune_gradio.py  gemini_transliteration.py  generate_phonetic_metadata.py  gradio.Dockerfile  gradio_app.py  infer_conformer.py  inference-cli.py  inference-cli.toml  inference.toml  kaggle_indic_download.py  package_demo.py  polyphone_dict.json  prepare_indic_dataset.py  prepare_libri_r_dataset.py  pyproject.toml  requirements-infer.txt  requirements-train.txt  requirements-zh.txt  requirements.txt  requirements_eval.txt  (+15 more)
.gemini/: gemini.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  help_wanted.yml  question.yml
.github/workflows/: pre-commit.yaml  publish-docker-image.yaml  publish-pypi.yaml  sync-hf.yaml
ckpts/: README.md
data/: librispeech_pc_test_clean_cross_sentence.lst
data/Emilia_ZH_EN_pinyin/: vocab.txt
data/train-benchmark_pinyin/: duration.json  metadata.csv  raw.arrow
f5_tts/: finetune-cli.py  finetune_gradio.py  gradio_app.py  inference-cli.py  inference-cli.toml  speech_edit.py  train.py
f5_tts/data/: librispeech_pc_test_clean_cross_sentence.lst
f5_tts/model/: __init__.py  cfm.py  dataset.py  ecapa_tdnn.py  modules.py  trainer.py  utils.py  utils_infer.py
f5_tts/model/backbones/: dit.py  mmdit.py  unett.py
f5_tts/scripts/: count_max_epoch.py  count_params_gflops.py  eval_infer_batch.py  eval_infer_batch.sh  eval_librispeech_test_clean.py  eval_seedtts_testset.py  prepare_csv_wavs.py  prepare_emilia.py  prepare_wenetspeech4tts.py
gemini_transliterations/: a.json  aa.json  ab.json  ac.json  ad.json  ae.json  af.json  ag.json  ah.json  ai.json  aj.json  ak.json  al.json  am.json  an.json  ao.json  ap.json  aq.json  ar.json  as.json  at.json  au.json  av.json  phonetic_part_1.json
model/: __init__.py  cfm.py  dataset.py  modules.py  trainer.py  utils.py  utils_infer.py
model/backbones/: dit.py  mmdit.py  unett.py
samples/: story.toml
scripts/: count_params_gflops.py  eval_infer_batch.py  eval_librispeech_test_clean.py  eval_seedtts_testset.py  prepare_csv_wavs.py  prepare_emilia.py  prepare_wenetspeech4tts.py
src/f5_tts/: api.py  finetune_cli.py  finetune_gradio.py  gradio_app.py  infer_api.py  inference_cli.py  socket.py  socket_client.py  socket_server.py  speech_edit.py
src/f5_tts/config/: E2TTS_Base_finetune.yaml  E2TTS_Base_train.yaml  E2TTS_Small_train.yaml  F5TTS_Base_finetune.yaml  F5TTS_Base_train.yaml  F5TTS_Small_train.yaml
src/f5_tts/configs/: E2TTS_Base.yaml  E2TTS_Base_train.yaml  E2TTS_Small.yaml  E2TTS_Small_train.yaml  F5TTS_Base.yaml  F5TTS_Base_train.yaml  F5TTS_RL.yaml  F5TTS_Small.yaml  F5TTS_Small_train.yaml  F5TTS_v1_Base.yaml  F5TTS_v1_Small.yaml
src/f5_tts/eval/: README.md  ecapa_tdnn.py  eval_infer_batch.py  eval_infer_batch.sh  eval_infer_batch_example.sh  eval_librispeech_test_clean.py  eval_seedtts_testset.py  eval_utmos.py  utils_eval.py
src/f5_tts/infer/: README.md  SHARED.md  infer_cli.py  infer_gradio.py  speech_edit.py  utils_infer.py
src/f5_tts/infer/examples/basic/: basic.toml
src/f5_tts/infer/examples/multi/: story.toml  story.txt
src/f5_tts/model/: __init__.py  cfm.py  dataset.py  duration.py  mlx_modules.py  modules.py  trainer.py  utils.py  utils_infer.py
src/f5_tts/model/backbones/: README.md  dit.py  mmdit.py  unett.py
src/f5_tts/mongolian/: dataset.py  model.py  text_processor.py  vocabulary.py
src/f5_tts/rewards/: __init__.py  combiner.py  registry.py  types.py  utils.py
src/f5_tts/rewards/providers/: __init__.py  funasr_wer.py  wespeaker_sim.py
src/f5_tts/rl/: __init__.py  difftools.py  trainer_grpo.py
src/f5_tts/runtime/triton_trtllm/: .gitignore  Dockerfile.server  README.md  benchmark.py  client_grpc.py  client_http.py  docker-compose.yml  fill_template.py  requirements-pytorch.txt  run.sh
src/f5_tts/runtime/triton_trtllm/model_repo_f5_tts/f5_tts/: config.pbtxt
src/f5_tts/runtime/triton_trtllm/model_repo_f5_tts/vocoder/: config.pbtxt
src/f5_tts/runtime/triton_trtllm/patch/: __init__.py
src/f5_tts/runtime/triton_trtllm/scripts/: conv_stft.py  convert_checkpoint.py  export_vocoder_to_onnx.py  export_vocos_trt.sh  fill_template.py
src/f5_tts/scripts/: build_test_audio_pack.py  count_max_epoch.py  count_max_epoch_precise.py  count_params_gflops.py  eval_infer_batch.py  fetch_reward_asr_model.py  fetch_reward_spk_model.py  prepare_csv_wavs.py  run_rl_colab.sh
src/f5_tts/train/: README.md  finetune_cli.py  finetune_gradio.py  finetune_gradio_original.py  train-benchmark.py  train.py  train_mongolian.py  train_rl.py  utils.py
src/f5_tts/train/datasets/: prepare_csv_wavs.py  prepare_emilia.py  prepare_emilia_v2.py  prepare_libritts.py  prepare_ljspeech.py  prepare_wenetspeech4tts.py
src/tts_article/: pipeline.py
tests/: conftest.py  test_rl_integration.py
tests/assets/: README
(+4 files in other folders)
